--- a/index.html
+++ b/index.html
@@ -17,7 +17,20 @@
     <div class="container">
       <h2>Challenge 2: Cat Generator</h2>
       <button class="btn btn-success">Generate cat</button>
-      <div class="flex-box-container"></div>
+      <div class="flex-box-container">
+        <img
+          src="http://thecatapi.com/api/images/get?format=src&type=gif&size=small"
+          alt=""
+        />
+        <img
+          src="http://thecatapi.com/api/images/get?format=src&type=gif&size=small"
+          alt=""
+        />
+        <img
+          src="http://thecatapi.com/api/images/get?format=src&type=gif&size=small"
+          alt=""
+        />
+      </div>
     </div>
 
     <script src="src/app.js"></script>
